--- a/index.html
+++ b/index.html
@@ -38,19 +38,16 @@
    </style>
    
 <html>
-	<head>
-      <center><h1> <img src="https://feeldreams.github.io/emawh.gif" id="fotostiker5" /> Selamat Ulang Tahun <img src="https://feeldreams.github.io/pandakuning.gif" id="fotostiker4" /> </h1></center>
-      <center><h2>Mela Aprilian Wardani</h2></center>
+      <h1 align = "center"> <img src="https://feeldreams.github.io/emawh.gif" id="fotostiker5" align = "left" /> Selamat Ulang Tahun <img src="https://feeldreams.github.io/pandakuning.gif" id="fotostiker4" align = "right" /> </h1>
+      <h2 align = "center"> Mela Aprilian Wardani</h2>
 		<body>
-         <!-- <div class="bg-image"></div> -->
-         <img src="hbdmel.jpg" style="display:block; margin:auto;">
-			<body bgcolor="white"><center><br>
+         <img src="hbdmel.jpg" align = "center">
+			<body bgcolor="white" align = "center"><br>
 			<font face="Abel" size="6px" color="black"><b></b>
 			<br><font size="6px">
 			<font color="white"> </font><marquee scrollamount="5" width="680" height="50" behavior="alternate">Selamat ulang tahun yang ke - 21 ya mell, semoga panjang umur, diperlancar semua urusannya dan sehat selalu. wish you all the best deh pokoknya XD </marquee><font color="white"> </font>
 			<br><br><font size="6px" face="Ubuntu Condensed">
 		</body>
       <img src="https://feeldreams.github.io/pandacoklat.gif" id="fotostiker2" />
-   </head>
 </html>
  
