--- a/index.html
+++ b/index.html
@@ -26,22 +26,19 @@
   </style>
 
   <script>
-    alert("Hy ki");
+    alert("Hai mela");
     alert("selamat ulang tahun ya ");
     alert("panjang umur");
     alert("sehat selalu");
     alert("semoga menjadi");
     alert("anak pintar");
-    alert("kesayangan orang tua");
-    alert("somoga cita citanya");
-    alert("dapat di gapai dengan");
-    alert("mudah")
+    alert("semoga cita citanya");
+    alert("dapat digapai dengan mudah");
     alert("ehh... satu lagi");
     alert("jangan lupa ibadah");
-    alert("dahhh... ki")
-    alert("maaf engga bis angasih apa apa")
-    alert(" dahhh..ki")
-    alert("sekali lagi happy birthday ki")
+    alert("dada mell")
+    alert("maaf ya enda bisa ngasih apa apa")
+    alert("sekali lagi happy birthday melaa")
   </script>
 
   <head>
