--- a/index.html
+++ b/index.html
@@ -51,19 +51,26 @@
   </style>
 
   <script>
-    alert("Hai mela");
-    alert("selamat ulang tahun ya ");
-    alert("panjang umur");
-    alert("sehat selalu");
-    alert("semoga menjadi");
-    alert("anak pintar");
-    alert("semoga cita citanya");
-    alert("dapat digapai dengan mudah");
-    alert("ehh... satu lagi");
-    alert("jangan lupa ibadah");
-    alert("dada mell")
-    alert("maaf ya enda bisa ngasih apa apa")
-    alert("sekali lagi happy birthday melaa")
+    alert("Hola melaa");
+    alert("Selamat ulang tahun ya ");
+    alert("Panjang umur");
+    alert("Sehat selalu");
+    alert("Semoga cita citanya");
+    alert("Dapat dicapai dengan mudah");
+    alert("Jangan terlalu sering bersedih")
+    alert("Kan ada aku 😋")
+    alert("Seperti biasa")
+    alert("Kalau ada apa apa jangan dipendam sendiri")
+    alert("Bilang sama aku 😁")
+    alert("Kita selesaiin bareng-bareng ")
+    alert("Ehh... satu lagi");
+    alert("Jangan lupa ibadah");
+    alert("Walau kayanya malah aku yang masih sering bolong 🤣");
+    alert("Dada mell")
+    alert("Maaf ya enda bisa ngasih apa apa")
+    alert("Kamu jauh sih 😋")
+    alert("Sekali lagi happy birthday melaa")
+    alert("Tunggu bentar ya :3")
   </script>
 
   <head>
