--- a/index.html
+++ b/index.html
@@ -51,22 +51,19 @@
   </style>
 
   <script>
-    alert("Hola melaa");
-    alert("Selamat ulang tahun ya ");
-    alert("Panjang umur");
-    alert("Sehat selalu");
+    alert("Hola melaa 👋🏻");
+    alert("Selamat ulang tahun ya 🥳");
+    alert("Panjang umur 🙆🏻‍♀️");
+    alert("Sehat selalu 💃🏻");
     alert("Semoga cita citanya");
     alert("Dapat dicapai dengan mudah");
-    alert("Jangan terlalu sering bersedih")
-    alert("Kan ada aku 😋")
     alert("Seperti biasa")
-    alert("Kalau ada apa apa jangan dipendam sendiri")
-    alert("Bilang sama aku 😁")
-    alert("Kita selesaiin bareng-bareng ")
-    alert("Ehh... satu lagi");
+    alert("Semangka 🍉")
+    alert("Ehh... semangat")
+    alert("Sama satu lagi");
     alert("Jangan lupa ibadah");
     alert("Walau kayanya malah aku yang masih sering bolong 🤣");
-    alert("Dada mell")
+    alert("Dada mell 👋🏻")
     alert("Maaf ya enda bisa ngasih apa apa")
     alert("Kamu jauh sih 😋")
     alert("Sekali lagi happy birthday melaa")
